fixed long answers overflowing container

--- a/styles/main.css
+++ b/styles/main.css
@@ -70,6 +70,7 @@ body {
   transition: all 0.25s;
   font-weight: 300;
   font-size: 15px;
+  padding-bottom: 5px;
 }
 
 .question__wrapper.active .answer {
